# debate_multiagent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/benchmarks/: README.md  benchmark_v3_annotations.json  sample_submission.json  seed_v1.json  seed_v3.json  submission_template.json  submission_template_v3.json
data/dossiers/: ai_high_school_education.json
data/sessions/: 4db860d9-75d5-4963-965a-6450dfe896ba.json  7a05c75f-7b2c-47bf-96f2-d496a7f1557a.json
docs/: agent-backend-learning.md  evaluation.md  prompts.md  technical-design.md
scripts/: build_benchmark_dataset.py  cleanup_web.ps1  init_benchmark_submission.py  score_benchmark_submission.py  start_web.ps1  start_web.sh
src/debate_agent/: __init__.py  __main__.py
src/debate_agent/app/: cli.py  service.py  web.py
src/debate_agent/domain/: models.py
src/debate_agent/evaluation/: __init__.py  benchmark_builder.py  benchmark_runner.py
src/debate_agent/infrastructure/: auth.py  exceptions.py  llm_client.py  logging_config.py  rate_limiter.py  security_headers.py  settings.py
src/debate_agent/orchestration/: agent_services.py  match_engine.py  oversight.py  pipeline.py  pipeline_models.py  pipeline_runtime.py  preparation.py  review_engine.py  session_state.py  (+2 more)
tests/: test_application_service.py  test_benchmark_builder.py  test_benchmark_runner.py  test_benchmark_v3_builder.py  test_evidence_quality.py  test_infrastructure.py  test_json_store.py  test_opening_agent.py  test_sqlite_store.py  test_web_app.py
(+14 files in other folders)
